ISSUE:  670  PURPOSE:  Transaction styles DESC:  Permit background and spacing.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1299,7 +1299,7 @@ input::placeholder {
 	border: 1px solid #ced4da;
 	border-right: none;
 	background-clip: padding-box;
-	background-color: #f5f5f5;
+	background-color: #f8f9fa;
 	border-radius: .2em 0 0 .2em;
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 	font-weight: 450;
@@ -1358,7 +1358,7 @@ input::placeholder {
 	color: rgba(0, 0, 0, .6);
 	border: 1px solid #ced4da;
 	background-clip: padding-box;
-	background-color: #f5f5f5;
+	background-color: #f8f9fa;
 	border-radius: 0 .2em .2em 0;
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 	font-weight: 450;
